[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/thems/s18.tres" type="Theme" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://assets/background/b1_pixel.png" type="Texture" id=3]
[ext_resource path="res://src/popup/warning/warning.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/test_learning/caster.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_start" type="Button" parent="."]
margin_left = 819.0
margin_top = 34.0
margin_right = 990.0
margin_bottom = 84.0
theme = ExtResource( 1 )
text = "Server Start"

[node name="connect_solder" type="Button" parent="."]
margin_left = 156.729
margin_top = 192.491
margin_right = 364.729
margin_bottom = 232.491
theme = ExtResource( 1 )
text = "Second game state"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect_bug" type="Button" parent="."]
margin_left = 156.0
margin_top = 32.0
margin_right = 364.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "Connect bug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect_science" type="Button" parent="."]
margin_left = 155.0
margin_top = 111.0
margin_right = 272.0
margin_bottom = 153.0
theme = ExtResource( 1 )
text = "Connect science"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 750.298
margin_top = 127.003
margin_right = 919.298
margin_bottom = 141.003
text = "adress WebSocket server: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 753.298
margin_top = 196.003
margin_right = 922.298
margin_bottom = 210.003
text = "port WebSocket server: "

[node name="ws_adress" type="LineEdit" parent="."]
margin_left = 754.0
margin_top = 147.0
margin_right = 997.0
margin_bottom = 171.0
text = "ws://127.0.0.1"

[node name="ws_port" type="LineEdit" parent="."]
margin_left = 754.0
margin_top = 221.0
margin_right = 997.0
margin_bottom = 245.0
text = "9081"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warning" parent="." instance=ExtResource( 4 )]
visible = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0
rect_min_size = Vector2( 1024, 80 )
time_close_popup = 4.0

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 36.0203
margin_top = 262.755
margin_right = 833.02
margin_bottom = 571.755
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 38.0203
margin_top = 265.755
margin_right = 828.02
margin_bottom = 582.755
text = "Setting parameters:
Don't forget to press Enter to confirm the new port or socket parameter.
Server startup and multiplayer game:
To start the server, set the parameters and click the \"start server\" button.
Always connect the bug first, then the scientist (or the algorithm will take his role). The soldier is present for testing.
Game 1 part:
The Bug hides and runs away from the scientist, the scientist catches him with the help of an electric grid or with his hands (you need to approach the beetle). The scientist leaves Chebureks in his halo, which the Beetle must eat to complete the mutation in acid mandibles, this mutation appeared during one experiment. While the acid does little damage to the beetle, the chebureks restore them. Chebureks may also appear near the fridge (but rarely).
A Bug can also hide under tables, a scientist needs to either shoot blindly under the table or put a flashlight there (beyond the edge of the table)

Shift - running
F - turn off/turn on the flashlight

Game 2 part:
Well, you'll find out for yourself :)
E - does something (scientist)
The left mouse button - does something"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="server_start" to="." method="_on_server_start_pressed"]
[connection signal="pressed" from="connect_solder" to="." method="_on_connect_solder_pressed"]
[connection signal="pressed" from="connect_bug" to="." method="_on_connect_bug_pressed"]
[connection signal="pressed" from="connect_science" to="." method="_on_connect_science_pressed"]
[connection signal="text_entered" from="ws_adress" to="." method="_on_ws_adress_text_entered"]
[connection signal="text_entered" from="ws_port" to="." method="_on_ws_port_text_entered"]
